examples/multitier_scenario/results/expert/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
  labels:
    app: ecommerce
